--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,10 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
             android:fontFamily="cursive"
             android:gravity="center_horizontal"
             android:text="@string/title"
-            android:textSize="48sp" />
+            android:textSize="52sp" />
 
 
         <TextView
@@ -32,18 +31,12 @@
             style="@style/QuestionTitleStyle"
             android:text="@string/instructions_two" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        <LinearLayout style="@style/LinearLayout_FillInTheBlank">
 
             <EditText
                 android:id="@+id/answer_one"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/question_one"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp" />
+                style="@style/FillInTheBlank"
+                android:hint="@string/question_one" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -51,19 +44,12 @@
                 android:text="@string/buton" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-15dp"
-            android:orientation="horizontal">
+        <LinearLayout style="@style/LinearLayout_FillInTheBlank">
 
             <EditText
                 android:id="@+id/answer_two"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/question_two"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp" />
+                style="@style/FillInTheBlank"
+                android:hint="@string/question_two" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -71,11 +57,7 @@
                 android:text="@string/layout" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-15dp"
-            android:orientation="horizontal">
+        <LinearLayout style="@style/LinearLayout_FillInTheBlank">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -84,11 +66,8 @@
 
             <EditText
                 android:id="@+id/answer_three"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/question_three"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp" />
+                style="@style/FillInTheBlank"
+                android:hint="@string/question_three" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -97,11 +76,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-15dp"
-            android:orientation="horizontal">
+        <LinearLayout style="@style/LinearLayout_FillInTheBlank">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -110,11 +85,8 @@
 
             <EditText
                 android:id="@+id/answer_four"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/question_four"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp" />
+                style="@style/FillInTheBlank"
+                android:hint="@string/question_four" />
 
             <TextView
                 android:id="@+id/textView"
@@ -124,11 +96,8 @@
 
             <EditText
                 android:id="@+id/answer_five"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/question_five"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp" />
+                style="@style/FillInTheBlank"
+                android:hint="@string/question_five" />
 
         </LinearLayout>
 
@@ -191,6 +160,7 @@
             android:text="@string/question_eight" />
 
         <RadioGroup
+            android:id="@+id/radioGroupQuestion_6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -304,7 +274,6 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="16dp"
             android:onClick="quizResults"
-
             android:text="@string/submit" />
 
         <!-- PLACEHOLDER FOR RESULTS LIST 1-12-->
@@ -313,8 +282,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="32dp"
-            android:layout_marginTop="16dp" />
-
+            android:layout_marginBottom="16dp" />
     </LinearLayout>
 </ScrollView>
