--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,26 +8,36 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <!-- Incorrect Answer Font Style -->
-    <style name="IncorrectTextStyle" parent="@android:style/TextAppearance.Medium">
-        <!-- Customize your font here. -->
-        <item name="android:textColor">#FF0000</item>
-    </style>
-
     <!-- Question Instruction Font Style-->
     <style name="QuestionTitleStyle" parent="@android:style/TextAppearance.Medium">
-        <!-- Customize your font here. -->
         <item name="android:textColor">#000000</item>
-        <item name ="android:layout_width">match_parent</item>
-        <item name ="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">16dp</item>
         <item name="android:layout_marginTop">16dp</item>
     </style>
 
+    <!-- Answers will be styled-->
     <style name="AnswerStyle" parent="@android:style/TextAppearance.Small">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingLeft">24dp</item>
+    </style>
+
+    <!-- Fill in the Blank - LinearLayout -->
+    <style name="LinearLayout_FillInTheBlank">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">-15dp</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <!-- Fill in the Blank -->
+    <style name="FillInTheBlank">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
     </style>
 
 </resources>
