+ Retake Button + Reset every question + Clears display Result summary
(worked on style for appearance)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <!-- Question Instruction Font Style-->
     <style name="QuestionTitleStyle" parent="@android:style/TextAppearance.Medium">
         <item name="android:textColor">#000000</item>
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginBottom">16dp</item>
         <item name="android:layout_marginTop">16dp</item>
@@ -36,8 +36,8 @@
     <style name="FillInTheBlank">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingLeft">20dp</item>
-        <item name="android:paddingRight">20dp</item>
+
+        <item name="android:paddingRight">4dp</item>
     </style>
 
 </resources>
