--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,18 +33,27 @@
 
         <LinearLayout style="@style/LinearLayout_FillInTheBlank">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1. " />
             <EditText
                 android:id="@+id/answer_one"
                 style="@style/FillInTheBlank"
+
                 android:hint="@string/question_one" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/buton" />
+                android:text="@string/button" />
         </LinearLayout>
 
         <LinearLayout style="@style/LinearLayout_FillInTheBlank">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2. " />
 
             <EditText
                 android:id="@+id/answer_two"
@@ -63,11 +72,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/android" />
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" 3. " />
             <EditText
                 android:id="@+id/answer_three"
                 style="@style/FillInTheBlank"
-                android:hint="@string/question_three" />
+                android:hint="@string/question_three"
+                android:layout_width="wrap_content" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -82,6 +95,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/android" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" 4. " />
 
             <EditText
                 android:id="@+id/answer_four"
@@ -93,6 +110,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/helloWorld" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" 5. " />
 
             <EditText
                 android:id="@+id/answer_five"
@@ -160,7 +182,7 @@
             android:text="@string/question_eight" />
 
         <RadioGroup
-            android:id="@+id/radioGroupQuestion_6"
+            android:id="@+id/radioGroupQuestion_8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -182,6 +204,7 @@
             android:text="@string/question_nine" />
 
         <RadioGroup
+            android:id="@+id/radioGroupQuestion_9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -203,6 +226,7 @@
             android:text="@string/question_ten" />
 
         <RadioGroup
+            android:id="@+id/radioGroupQuestion_10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -227,6 +251,7 @@
             android:text="@string/question_eleven" />
 
         <RadioGroup
+            android:id="@+id/radioGroupQuestion_11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -251,8 +276,10 @@
             android:text="@string/question_twelve" />
 
         <RadioGroup
+            android:id="@+id/radioGroupQuestion_12"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp">
 
             <RadioButton
                 android:id="@+id/correct_answer_twelve"
@@ -268,14 +295,28 @@
                 android:text="@string/purple" />
         </RadioGroup>
 
-        <Button
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="16dp"
-            android:onClick="quizResults"
-            android:text="@string/submit" />
+            android:orientation="horizontal">
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:onClick="quizResults"
+                android:text="@string/submit" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:onClick="retake"
+                android:text="@string/reset" />
+        </LinearLayout>
         <!-- PLACEHOLDER FOR RESULTS LIST 1-12-->
         <TextView
             android:id="@+id/resultSummary"
